--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
-name = "rust-final-project"
+name = "image-processor"
 version = "0.1.0"
-authors = ["Jin Han <jinhan2019@u.northwestern.edu>"]
+authors = ["Jin Han <jinhan2019@u.northwestern.edu>",
+           "Steven Chen <yuxin2020@u.northwestern.edu>"]
 edition = "2018"
 
 [dependencies]
+snafu = "0.3.1"
+rayon = "1.0"
+image = "*"
